@@ -1,3 +1,7 @@
+2000-03-14  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* ftpclass.cc, resource.cc: add ftp:web-mode.
+
 2000-03-12  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* ftpclass.cc: (DataAbort) disregard replies for commands sent
